--- a/index.html
+++ b/index.html
@@ -16,47 +16,53 @@
 </head>
 
 <body>
-     <div id="top">
-    <h1 id="start">Select your Superhero</h1>
-<div class="main-box">
-    <div id="game-img">
     
+
+<!-- ...................................-->
+<!-- ...................................-->
+ <div id="top">
+    <h1 id="start">Select your Superhero</h1>
+    <div class="main-box">
+      <div id="game-img">
         <div class="head">
-            <div class="imgbox">
-                <img src="animy2.png" alt="">
-            </div>
-            <p>Wangling</p>
+          <div class="imgbox">
+            <img src="animy2.png" alt="" />
+          </div>
+          <p>Wangling</p>
         </div>
 
         <div class="head">
-            <div class="imgbox">
-              <img src="animy1.png" alt="">
-            </div>
-            <p>Flame Hashira</p>
+          <div class="imgbox">
+            <img src="animy1.png" alt="" />
+          </div>
+          <p>Flame Hashira</p>
         </div>
 
         <div class="head">
-            <div class="imgbox">
-         <img src="animy3.png" alt="">
-            </div>
-            <p>Geto</p>
+          <div class="imgbox">
+            <img src="animy3.png" alt="" />
+          </div>
+          <p>Geto</p>
+        </div>
+      </div>
+
+      <h3 id="selectedSuperhero">Selected: <span></span></h3>
+
+      <button id="btn">Start Game</button>
     </div>
-</div> 
+  </div>
 
-    <h3>Wangling Selected</h3>
-   
-    <button id="btn">Start Game</button>
-</div>
-
-
-<!-- <div id="second-page">
+  <div id="second-page">
     <p id="left">Time <span></span></p>
 
-    <div id="blank-box-img">
-    </div>
+    <div id="blank-box-img"></div>
 
     <p id="right">Score <span></span></p>
-</div> -->
+  </div>
+
+      <div id="third-page">
+          <h3>Your score is: <span></span></h3>
+      </div>
 
 <script src="game.js"></script>
 
