overflow issue solved

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
       <div id="game-img">
         <div class="head">
           <div class="imgbox">
-            <img src="animy2.png" alt="" />
+            <img src="./images/animy2.png" alt="" />
           </div>
           <p>Wangling</p>
         </div>
 
         <div class="head">
           <div class="imgbox">
-            <img src="animy1.png" alt="" />
+            <img src="./images/animy1.png" alt="" />
           </div>
           <p>Flame Hashira</p>
         </div>
 
         <div class="head">
           <div class="imgbox">
-            <img src="animy3.png" alt="" />
+            <img src="./images/animy3.png" alt="" />
           </div>
           <p>Geto</p>
         </div>
